--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: build docker image, tag, build and push release image
         shell: bash
-        run: | echo "building";sleep 15
+        run: echo "building";sleep 15
