--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: build docker image, tag, build and push release image
         shell: bash
-        run: | echo "prod testing";sleep 15
+        run: echo "prod testing";sleep 15
