--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows: [qa]
-    branches: [main]
+    branches: [feature/**]
     types:
       - completed
 
