--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -2,7 +2,7 @@ name: qa
 
 on:
   workflow_run:
-    workflows: [test]
+    workflows: [build]
     branches: [feature/**]
     types:
       - completed
