--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: test
 
 on:
   workflow_run:
-    workflows: [build]
+    workflows: [qa]
     branches: [feature/**]
     types:
       - completed
