--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -15,4 +15,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: build docker image, tag, build and push release image
         shell: bash
-        run: echo "qa testing";sleep 15
+        run: cat "README.md";sleep 15
