--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -2,9 +2,10 @@ name: qa
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: [build]
-    branches: [feature/**]
+  on:
+    repository_dispatch:
+      types: [ build-event ]
+    branches: [main]
     types:
       - completed
 
@@ -13,6 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: build docker image, tag, build and push release image
-        shell: bash
-        run: cat "README.md";sleep 15
+        with:
+          ref: ${{ github.event.client_payload.ref }}
+      - run: echo ${{ github.event.client_payload.version }}
