--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_ACTION_TOKEN }}
           REPO_NAME: "githubactiontest"
           ORG_NAME: "atxplangl"
-          EVENT: "build-event"
+          EVENT: build-event
           CLIENT_PAYLOAD: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "version": "1.1.0"}'
       - uses: actions/checkout@v3
       - name: build docker image, tag, build and push release image
