--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ jobs:
       - name: repository dispatch
         uses: atxplangl/action-repository-dispatch-caller@main
         with:
-          GITHUB_TOKEN: ${{ secrets.GH_ACTION_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           REPO_NAME: "githubactiontest"
           ORG_NAME: "atxplangl"
-          EVENT: build-event
+          EVENT: "build-event"
           CLIENT_PAYLOAD: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "version": "1.1.0"}'
       - uses: actions/checkout@v3
       - name: build docker image, tag, build and push release image
