--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           REPO_NAME: "githubactiontest"
           ORG_NAME: "atxplangl"
           EVENT: "build-event"
-          CLIENT_PAYLOAD: {"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "version": "1.1.0"}
+          CLIENT_PAYLOAD: ```{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "version": "1.1.0"}```
       - uses: actions/checkout@v3
       - name: build docker image, tag, build and push release image
         shell: bash
