--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        name: build docker image, tag, build and push release image
+        shell: bash
+        run: cat "README.md";sleep 15
       - name: repository dispatch
         uses: atxplangl/action-repository-dispatch-caller@main
         with:
@@ -18,9 +22,6 @@ jobs:
           REPO_NAME: "githubactiontest"
           ORG_NAME: "atxplangl"
           EVENT: "build-event"
-          CLIENT_PAYLOAD: '''{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "version": "1.1.0"}'''
-      - uses: actions/checkout@v3
-      - name: build docker image, tag, build and push release image
-        shell: bash
-        run: cat "README.md";sleep 15
+          VERSION: "1.1.0"
+
 
