--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        name: build docker image, tag, build and push release image
+      - name: build docker image, tag, build and push release image
         shell: bash
         run: cat "README.md";sleep 15
       - name: repository dispatch
