--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -12,3 +12,7 @@ jobs:
         with:
           ref: ${{ github.event.client_payload.ref }}
       - run: echo ${{ github.event.client_payload.version }}
+      - name: build docker image, tag, build and push release image
+        shell: bash
+        run: cat "README.md";sleep 15
+
