updating all wf

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           REPO_NAME: "githubactiontest"
           ORG_NAME: "atxplangl"
-          EVENT: "build-event"
+          EVENT: "qa-event"
           VERSION: "1.2.0"
           GITHUB_SHA: "${{ github.sha }}"
           GITHUB_REF: "${{ github.ref }}"
