--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,17 @@
 name: test
 
 on:
-  workflow_run:
-    workflows: [qa]
-    branches: [feature/**]
-    types:
-      - completed
+  repository_dispatch:
+    types: [test-event]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: build docker image, tag, build and push release image
-        shell: bash
-        run: echo "testing";sleep 15
+        with:
+          ref: ${{ github.event.client_payload.ref }}
+      - run: |
+          echo ${{ github.event.client_payload.version }}
+          echo ${{ github.event.client_payload.ref }}
+          echo ${{ github.event.client_payload.sha }}
