--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -22,7 +22,7 @@ jobs:
           REPO_NAME: "githubactiontest"
           ORG_NAME: "atxplangl"
           EVENT: "test-event"
-          VERSION: "1.3.0"
-          GITHUB_SHA: "${{ github.sha }}"
-          GITHUB_REF: "${{ github.ref }}"
+          VERSION: "${{ github.event.client_payload.version }}"
+          GITHUB_SHA: "${{ github.event.client_payload.sha }}"
+          GITHUB_REF: "${{ github.event.client_payload.ref }}"
 
