--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: test
 
 on:
   repository_dispatch:
-    types: [test-event]
+    types: [build-event]
 
 jobs:
   test:
@@ -15,13 +15,3 @@ jobs:
           echo ${{ github.event.client_payload.version }}
           echo ${{ github.event.client_payload.ref }}
           echo ${{ github.event.client_payload.sha }}
-      - name: repository dispatch
-        uses: atxplangl/action-repository-dispatch-caller@main
-        with:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          REPO_NAME: "githubactiontest"
-          ORG_NAME: "atxplangl"
-          EVENT: "prod-event"
-          VERSION: "${{ github.event.client_payload.version }}"
-          GITHUB_SHA: "${{ github.event.client_payload.sha }}"
-          GITHUB_REF: "${{ github.event.client_payload.ref }}"
