--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -13,9 +13,9 @@ jobs:
           ref: ${{ github.event.client_payload.ref }}
       - name: set env vars for repository registory
         run: |
-          echo "temp_github_version=$(echo ${{ github.event.client_payload.version }}" >> $GITHUB_ENV
-          echo "temp_github_sha=$(echo ${{ github.event.client_payload.ref }}" >> $GITHUB_ENV
-          echo "temp_github_ref=$(echo ${{ github.event.client_payload.sha }}" >> $GITHUB_ENV
+          echo "temp_github_version=$(echo ${{ github.event.client_payload.version }})" >> $GITHUB_ENV
+          echo "temp_github_sha=$(echo ${{ github.event.client_payload.ref }})" >> $GITHUB_ENV
+          echo "temp_github_ref=$(echo ${{ github.event.client_payload.sha }})" >> $GITHUB_ENV
       - name: repository dispatch
         uses: atxplangl/action-repository-dispatch-caller@main
         with:
