--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -2,7 +2,7 @@ name: qa
 
 on:
   repository_dispatch:
-    types: [qa-event]
+    types: [build-event]
 
 jobs:
   qa:
@@ -11,20 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.client_payload.ref }}
-      - name: set env vars for repository registory
-        run: |
-          echo "temp_github_version=$(echo ${{ github.event.client_payload.version }})" >> $GITHUB_ENV
-          echo "temp_github_sha=$(echo ${{ github.event.client_payload.sha }})" >> $GITHUB_ENV
-          echo "temp_github_ref=$(echo ${{ github.event.client_payload.ref }})" >> $GITHUB_ENV
-      - name: repository dispatch
-        uses: atxplangl/action-repository-dispatch-caller@main
-        with:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          REPO_NAME: "githubactiontest"
-          ORG_NAME: "atxplangl"
-          EVENT: "test-event"
-          VERSION: "${{ env.temp_github_version }}"
-          GITHUB_SHA: "${{ env.temp_github_sha }}"
-          GITHUB_REF: "${{ env.temp_github_ref }}"
-
-
+      - run: |
+          echo ${{ github.event.client_payload.version }}
+          echo ${{ github.event.client_payload.ref }}
+          echo ${{ github.event.client_payload.sha }}
